// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render pagination 1`] = `
<div
  className="1bek1ug"
>
  <ul
    aria-describedby={null}
    className="y1rhga"
    role="navigation"
  >
    <li
      className="mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="109b087"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="109b087"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination 2`] = `
".y1rhga:after {
  content: \\"\\";
  display: table;
  clear: both
}
.y1rhga {
  list-style: none;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  float: left;
  border-radius: 3px;
  box-shadow: none
}
.1bek1ug:after {
  content: \\"\\";
  display: table;
  clear: both
}
.mgj6am {
  float: left;
  position: relative;
  background-color: #ededed;
  color: #666;
  cursor: default;
  border-radius: 3px
}
.109b087:focus {
  z-index: 1
}
.109b087 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: default
}
.1wi2cf1 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: default;
  border-color: #62a1d8;
  z-index: 1
}
.15spu1u {
  float: left;
  position: relative;
  background-color: #fff;
  color: #408BC9;
  cursor: pointer
}
.32iz07:focus {
  z-index: 1
}
.32iz07 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: pointer
}
.hmei63 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: pointer;
  border-radius: 3px
}"
`;

exports[`should render pagination loading 1`] = `
<div
  className="1bek1ug"
>
  <ul
    aria-describedby={null}
    className="y1rhga"
    role="navigation"
  >
    <li
      className="mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="109b087"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="109b087"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--loading"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination loading 2`] = `
".y1rhga:after {
  content: \\"\\";
  display: table;
  clear: both
}
.y1rhga {
  list-style: none;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  float: left;
  border-radius: 3px;
  box-shadow: none
}
.1bek1ug:after {
  content: \\"\\";
  display: table;
  clear: both
}
.mgj6am {
  float: left;
  position: relative;
  background-color: #ededed;
  color: #666;
  cursor: default;
  border-radius: 3px
}
.109b087:focus {
  z-index: 1
}
.109b087 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: default
}
.1wi2cf1 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: default;
  border-color: #62a1d8;
  z-index: 1
}
.15spu1u {
  float: left;
  position: relative;
  background-color: #fff;
  color: #408BC9;
  cursor: pointer
}
.32iz07:focus {
  z-index: 1
}
.32iz07 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: pointer
}
.hmei63 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: pointer;
  border-radius: 3px
}"
`;

exports[`should render pagination with an infoFormatter 1`] = `
<div
  className="1bek1ug"
>
  <ul
    aria-describedby={null}
    className="y1rhga"
    role="navigation"
  >
    <li
      className="hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="109b087"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with an infoFormatter 2`] = `
".y1rhga:after {
  content: \\"\\";
  display: table;
  clear: both
}
.y1rhga {
  list-style: none;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  float: left;
  border-radius: 3px;
  box-shadow: none
}
.1bek1ug:after {
  content: \\"\\";
  display: table;
  clear: both
}
.hmei63 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: pointer;
  border-radius: 3px
}
.32iz07:focus {
  z-index: 1
}
.32iz07 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: pointer
}
.15spu1u {
  float: left;
  position: relative;
  background-color: #fff;
  color: #408BC9;
  cursor: pointer
}
.1wi2cf1 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: default;
  border-color: #62a1d8;
  z-index: 1
}
.109b087:focus {
  z-index: 1
}
.109b087 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: default
}"
`;

exports[`should render pagination with the last page active 1`] = `
<div
  className="1bek1ug"
>
  <ul
    aria-describedby={null}
    className="y1rhga"
    role="navigation"
  >
    <li
      className="hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="109b087"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="109b087"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with the last page active 2`] = `
".y1rhga:after {
  content: \\"\\";
  display: table;
  clear: both
}
.y1rhga {
  list-style: none;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  float: left;
  border-radius: 3px;
  box-shadow: none
}
.1bek1ug:after {
  content: \\"\\";
  display: table;
  clear: both
}
.hmei63 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: pointer;
  border-radius: 3px
}
.32iz07:focus {
  z-index: 1
}
.32iz07 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: pointer
}
.15spu1u {
  float: left;
  position: relative;
  background-color: #fff;
  color: #408BC9;
  cursor: pointer
}
.1wi2cf1 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: default;
  border-color: #62a1d8;
  z-index: 1
}
.109b087:focus {
  z-index: 1
}
.109b087 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: default
}
.mgj6am {
  float: left;
  position: relative;
  background-color: #ededed;
  color: #666;
  cursor: default;
  border-radius: 3px
}"
`;

exports[`should render with collapsed items 1`] = `
<div
  className="1bek1ug"
>
  <ul
    aria-describedby={null}
    className="y1rhga"
    role="navigation"
  >
    <li
      className="hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="15spu1u"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="109b087"
        href="#"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        7
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        8
      </a>
    </li>
    <li
      className="15spu1u"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        20
      </a>
    </li>
    <li
      className="hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render with collapsed items 2`] = `
".y1rhga:after {
  content: \\"\\";
  display: table;
  clear: both
}
.y1rhga {
  list-style: none;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  float: left;
  border-radius: 3px;
  box-shadow: none
}
.1bek1ug:after {
  content: \\"\\";
  display: table;
  clear: both
}
.hmei63 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: pointer;
  border-radius: 3px
}
.32iz07:focus {
  z-index: 1
}
.32iz07 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: pointer
}
.15spu1u {
  float: left;
  position: relative;
  background-color: #fff;
  color: #408BC9;
  cursor: pointer
}
.1wi2cf1 {
  float: left;
  position: relative;
  background-color: #408BC9;
  color: #fff;
  cursor: default;
  border-color: #62a1d8;
  z-index: 1
}
.109b087:focus {
  z-index: 1
}
.109b087 {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  position: relative;
  display: block;
  padding-top: .5em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: inherit;
  cursor: default
}"
`;
